Saurabh Tajane/Openshift/Project-Yaml-Files/React-Os.yaml
---
#deployment file

apiVersion: apps/v1
kind: Deployment
metadata:
  name: react-app
  labels:
    app: react-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: react-app
  template:
    metadata:
      labels:
        app: react-app
    spec:
      containers:
      - name: react-app
        image: saurabh7nt/student-web-app-react-v2
        ports:
        - containerPort: 3000
---
#service file

apiVersion: v1
kind: Service
metadata:
  name: react-app-service
spec:
  selector:
    app: react-app
  ports:
  - name: http
    port: 80
    targetPort: 3000
  type: NodePort
