Saurabh Tajane/Openshift/Project-Yaml-Files/Mysql-Route-Os.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: mysqldb-route
spec:
  to:
    kind: Service
    name: mysqldb-service
  port:
    targetPort: mysql
  tls:
    termination: edge
