Saurabh Tajane/Openshift/Project-Yaml-Files/Springboot-Route-Os.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: spring-app-route
spec:
  to:
    kind: Service
    name: spring-app-service
  port:
    targetPort: http
  tls:
    termination: edge
